# locator

./: .gitignore  locator.py  main.py  pyproject.toml
src/locator/: locator.py  locator_path.py  main.py
tests/: test_locator.py
